k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
