k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
    app: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/liudmila/(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 9000
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 9000
